# is_p2

./: README.md  interfaces.py  modulo_inteligente.py  publisher.py  pyproject.toml  pyrightconfig.json  visualizador.py
code/: cliente.py  lector_csv.py  main.py  modulo_inteligente.py  sistema_transporte.py  test.py
code/experimets/: main_experimentos.py
